# tg-downloader-ui

./: .dockerignore  .env.example  .env.release-safety.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ZH.md  SECURITY.md  THIRD_PARTY.md  docker-compose.yml  pyproject.toml  tg-downloader-ui.init
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-publish.yml  dockerhub-overview.yml
.planning/: .continue-here.md  HANDOFF.json
docker/: DOCKERHUB.md  entrypoint.sh  forwarder-supervisor.sh  restart-forwarder.sh
docs/: OPENWRT_TESTING.md  TESTING.md  TESTING_ZH.md
docs/prototypes/: media-control-center.html
docs/superpowers/plans/: 2026-07-10-p0-open-source-hardening.md  2026-07-10-remove-setup-token.md  2026-07-11-packaged-forwarder-default-on.md
docs/superpowers/specs/: 2026-07-08-ui-redesign-design.md  2026-07-10-p0-open-source-hardening-design.md  2026-07-10-remove-setup-token-design.md  2026-07-11-docker-forwarder-default-on-design.md  2026-07-13-full-ipk-and-history-rewrite-design.md
openwrt/: install-luci-link.sh  tg-downloader-ui.env.example  vendor-lock.json
openwrt/usr/share/luci/menu.d/: luci-app-tg-downloader-ui.json
openwrt/usr/share/rpcd/acl.d/: luci-app-tg-downloader-ui.json
scripts/: build_openwrt_ipk.py  update_dockerhub_overview.py
tests/: test_bot.py  test_forwarder.py  test_openwrt_ipk_builder.py  test_release_safety.py  test_tg_downloader_ui.py
tg_downloader_ui/: __init__.py  app.py  bot.py  forwarder.py  sources.py
(+1 files in other folders)
